--- a/calendar.html
+++ b/calendar.html
@@ -7,6 +7,11 @@
 
 <body>
 
+<div class="skyContainer">
+<div class="skyLeft"></div>
+<div class="skyRight"></div>
+</div>
+
 <div class="menu">
 	<a href="index.html" class="home"></a>
 	<a href="about.html" class="about"></a>
@@ -22,7 +27,7 @@
 
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
-	<h2 class="blue">Calendar</h2>
+	<h2 class="blue">Calendar/Events</h2>
 	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a 
 	Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in 
 	classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, 
