--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,11 @@
 
 <body>
 
+<div class="skyContainer">
+<div class="skyLeft"></div>
+<div class="skyRight"></div>
+</div>
+
 <div class="menu">
 	<a href="index.html" class="home"></a>
 	<a href="about.html" class="about"></a>
