Gallery framework semi-implemented, menu updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+<title>Animation Anteaters</title>
+
+<link rel="shortcut icon" href="Images/favicon.ico">
+
 <link rel="stylesheet" type="text/css" href="main.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
@@ -12,12 +16,13 @@
 <div class="skyRight"></div>
 </div>
 
+
 <div class="menu">
 	<a href="index.html" class="home"></a>
-	<a href="about.html" class="about"></a>
 	<a href="gallery.html" class="gallery"></a>
 	<a href="calendar.html" class="calendar"></a>
 	<a href="resources.html" class="resources"></a>
+	<a href="https://www.facebook.com/groups/141012042748209/" class="contact"></a>
 </div>
 
 <div class="mainBox">
@@ -28,21 +33,47 @@
 	<h1><span style="color: #c34938;">A</span>nimation <span style="color: #c34938;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<h2 class="red">Welcome</h2>
-	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a 
-	Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in 
-	classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, 
-	written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in 
-	section 1.10.32.
-	<br><br>
-	The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also 
-	reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-	<br><br>
-	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a 
-	Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in 
-	classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, 
-	written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in 
-	section 1.10.32.
-	<br><br>
+	<table>
+	<tr>
+	<td>
+	<img src="Images/dancingfinal.gif">
+	</td>
+	<td>
+	Animation Anteaters is designed to unite artists of all levels to learn about the principles of animation. The goal of this club is to produce animated shorts and experience a production pipeline. All members will be encouraged to contribute story assets for the shorts. This is the club for artists interested in storyboarding, character design, visual development and layout, and animation. We aim to become a team that cooperates and progresses together in the arts.
+	</td>
+	</tr>
+	</table>
+	
+	<table class="list">
+	<tr>
+		<td>
+		<h2 class="red">What We Do</h2>
+		</td>
+
+		<td>
+		<h2 class="red">Our Goals</h2>
+		</td>
+	</tr>
+	<tr>
+		<td>
+		<ul>
+			<li><b>We provide</b> an environment to share our passion for art, provide constructive criticism, and learn from each other</li>
+			<li><b>We strive</b> to expand our skills as individuals and as part of a team</li>
+			<li><b>We create</b> portfolio-ready animation and art pieces</li>
+		</ul>
+		</td>
+		
+		<td>
+		<ul>
+			<li><b>To develop fundamental skills</b> of drawing</li>
+			<li><b>To learn</b> the principles of animation</li>
+			<li><b>To produce</b> a complete animated short for Zotfest 2016</li>
+		</ul>
+		</td>
+	</tr>
+	</table>
+
+	
 	</div>
 </div>
 
