--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,15 @@
 <html>
 <head>
+<title>Art Gallery</title>
+
+<link rel="shortcut icon" href="Images/favicon.ico">
+
 <link rel="stylesheet" type="text/css" href="main.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="gallery.js"></script>
+
 </head>
 
 <body>
@@ -14,10 +21,10 @@
 
 <div class="menu">
 	<a href="index.html" class="home"></a>
-	<a href="about.html" class="about"></a>
 	<a href="gallery.html" class="gallery"></a>
 	<a href="calendar.html" class="calendar"></a>
 	<a href="resources.html" class="resources"></a>
+	<a href="https://www.facebook.com/groups/141012042748209/" class="contact"></a>
 </div>
 
 <div class="mainBox">
@@ -25,24 +32,34 @@
 	<div class="leftBorder"></div>
 	<div class="rightBorder"></div>
 
-	<h1><span style="color: #c34938;">A</span>nimation <span style="color: #c34938;">A</span>nteaters</h1>
+	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
-	<h2 class="red">Gallery</h2>
-	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a 
-	Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in 
-	classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, 
-	written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in 
-	section 1.10.32.
+	<h2 class="blue">Rex the Magician: 2014 - 2015</h2>
+	This year we made a short called. 
+	<center>
+	<video id="boat_final" src="Images/boat_final.mov" controls></video>
 	<br><br>
-	The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also 
-	reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-	<br><br>
-	Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a 
-	Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in 
-	classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, 
-	written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in 
-	section 1.10.32.
-	<br><br>
+	<table class="pics">
+		<tr>
+		<td><div class="cont"><img src="Images/underwater.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/night.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/tintampreview.png" class="thumb"></div></td>		
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		</tr>
+		
+		<tr>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		<td><div class="cont"><img src="Images/sailing.png" class="thumb"></div></td>
+		</tr>
+	</table>
+	</center>
+
+	
+	
 	</div>
 </div>
 
