Fixed some of the gallery js so it works in ff Added esc key to minimize large picture in gallery Added footer image Did some resource formatting Added back button to gallery pages Misc style stuff

--- a/calendar.html
+++ b/calendar.html
@@ -32,9 +32,14 @@
 	<h1><span style="color: #c34938;">A</span>nimation <span style="color: #c34938;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<h2 class="red">Meetings</h2>
-	Insert info about meeting time and place here.
+	TBA
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+	
+	<center>
+	<img src="Images/sleeping.gif">
+	</center>	
+	
 	</div>
 </div>
 
