--- a/gallery-2013-2014.html
+++ b/gallery-2013-2014.html
@@ -33,13 +33,14 @@
 	<div class="rightBorder"></div>
 
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
-	<br><br><br><br><br><br><br><br>
-	<h2 class="blue"><br>Sometime Last Autumn<br>2013 - 2014</h2>
+	<br><br><br><br><br><br><br><br><br>
+	<a href="gallery.html" class="b">Back</a>
+	<h2 class="blue">Sometime Last Autumn<br>2013 - 2014</h2>
 	A little boy is sent by his mother to deliver food to his grandma. His arrogant mean nature leads him to some trouble in the woods.
 	<br><br>
 	<center>
 	<video class="vid" controls>
-		<source src="Images/2013-2014/autumn.MP4" type="video/mp4">
+		<source src="Images/2013-2014/autumn.mp4" type="video/mp4">
 	</video>
 	<br><br>
 	<h2 class="blue">Art</h2>
@@ -141,7 +142,9 @@
 	
 	</center>
 
-	
+	<center>
+	<img src="Images/sleeping.gif">
+	</center>
 	
 	</div>
 </div>
