--- a/gallery-2014-2015.html
+++ b/gallery-2014-2015.html
@@ -33,7 +33,8 @@
 	<div class="rightBorder"></div>
 
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
-	<br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br>
+	<a href="gallery.html" class="b">Back</a>
 	<h2 class="blue">Rex the Magician<br>2014 - 2015</h2>
 	Life is full of magic and you know what? Sometimes, it comes flying down. Literally. Seven-year-old Rex loves to dress up as a magician and cast magic. One day, he has a little visitor... 
 	<br><br>
@@ -62,7 +63,7 @@
 		</tr>
 		
 		<tr>
-		<td><div class="cont"><img src="Images/2014-2015/Ted_Plane.jpg" class="thumb" title="Plane Concept"></div></td>		
+		<td><div class="cont"><img src="Images/2014-2015/Ted_Plane.JPG" class="thumb" title="Plane Concept"></div></td>		
 		<td><div class="cont"><img src="Images/2014-2015/PixarBall.jpeg" class="thumb" title="Pixar Ball Concept"></div></td>
 		<td><div class="cont"><img src="Images/2014-2015/RexScan0001.png" class="thumb" title="Cappy Cat Concept"></div></td>		
 		<td><div class="cont"><img src="Images/2014-2015/RexScan0002.png" class="thumb" title="Cappy Cat Expressions"></div></td>
@@ -89,8 +90,8 @@
 		<td><div class="cont"><img src="Images/2014-2015/newstoryboard.png" class="thumb" title="Dino Storyboard"></div></td>		
 		<td><div class="cont"><img src="Images/2014-2015/storyboardScan0001.jpg" class="thumb" title="Cappy and Suzy Storyboard"></div></td>		
 		<td><div class="cont"><img src="Images/2014-2015/Ted_Plane_1.JPG" class="thumb" title="Plane Storyboard"></div></td>
-		<td><div class="cont"><img src="Images/2014-2015/Ted_Plane_2.jpg" class="thumb" title="Plane Storyboard 2"></div></td>
-		<td><div class="cont"><img src="Images/2014-2015/TinaChau_ball-Storyboard.jpeg" class="thumb" title="Pixar Ball Storyboard"></div></td>
+		<td><div class="cont"><img src="Images/2014-2015/Ted_Plane_2.JPG" class="thumb" title="Plane Storyboard 2"></div></td>
+		<td><div class="cont"><img src="Images/2014-2015/TinaChau_Ball-Storyboard.jpeg" class="thumb" title="Pixar Ball Storyboard"></div></td>
 		</tr>
 		
 		<tr>
@@ -123,7 +124,9 @@
 	
 	</center>
 
-	
+	<center>
+	<img src="Images/sleeping.gif">
+	</center>
 	
 	</div>
 </div>
