--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,63 @@
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<h2 class="blue">Resources</h2>
-	You can find links to cool stuff here. 
+	<center><i>Check out these cool places for help and inspiration for all your art needs!</i></center>
+	<br>
+	<h2 class="blue res">Art</h2>
+	<br><br>
+	<table class="resList">
+	<tr>
+		<td><strong>Coloring Tutorials</strong>
+		</td>
+		
+		<td><strong>Figure Drawing</strong>
+		</td>
+		
+		<td><strong>Something Else</strong>
+		</td>
+	</tr>
+	
+	<tr>
+		<td>
+		<ul>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+		</ul>
+		</td>
+		
+		<td>
+		<ul>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+		</ul>
+		</td>
+		
+		<td>
+		<ul>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+			<li><a href="/" class="b">Test 1</a></li>
+		</ul>
+		</td>
+	</tr>
+	
+	
+	</table>
+		
+	
+	
+	<br><br>
+	
+	<h2 class="blue res">Animation</h1>
+	
+	<h2 class="blue res">Inspiration</h1>
+	
+	<center>
+	<img src="Images/sleeping.gif">
+	</center>
+	
 	</div>
 </div>
 
