--- a/gallery.html
+++ b/gallery.html
@@ -34,10 +34,15 @@
 	<br><br><br><br><br><br><br><br>
 	<h2 class="blue">Gallery</h2>
 	
-	<a href="gallery-2013-2014.html">2013-2014</a><br>
-	<a href="gallery-2014-2015.html">2014-2015</a>
+	<a href="gallery-2013-2014.html" class="b">2013-2014</a><br>
+	<a href="gallery-2014-2015.html" class="b">2014-2015</a>
 	<br><br>
 	<i>Note: You must have javascript enabled in order to view the galleries</i>
+	
+	<center>
+	<img src="Images/sleeping.gif">
+	</center>
+	
 	</div>
 </div>
 
