Updated links and added quarter schedule

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- HIGHLIGHT GOALS AND THE FACT THAT WE'RE GOING TO FOCUS ON PROJECTS -->
+<!-- HIGHLIGHT MEETING TIME!!! -->
 <html>
 <head>
 <title>Animation Anteaters</title>
@@ -44,6 +46,8 @@
 	</tr>
 	</table>
 	
+	
+	
 	<table class="list">
 	<tr>
 		<td>
@@ -65,13 +69,73 @@
 		
 		<td>
 		<ul>
+			<li><b>To produce</b> a complete animated short for Zotfest 2016</li>
 			<li><b>To develop fundamental skills</b> of drawing</li>
 			<li><b>To learn</b> the principles of animation</li>
-			<li><b>To produce</b> a complete animated short for Zotfest 2016</li>
 		</ul>
 		</td>
 	</tr>
 	</table>
+	
+	<br><br>
+	
+	<div class="box">
+		<h2 class="red">Fall Quarter</h2>
+		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. 
+		<br><br>
+		<i>*The schedule may change a little as the quarter progresses</i>
+		<br><br>
+		<b>Week 1 -</b> Getting to know the club and each other
+		<p><i>Post-meeting Jam:</i> Randomized character description sketch</p>
+		
+		<br>
+		
+		<b>Week 2 -</b> Gesture drawing
+		<p><i>Post-meeting Jam:</i> Posing your character from last week</p>
+		
+		<br>
+		
+		<b>Week 3 -</b> Basic bouncing ball animation
+		<p><i>Post-meeting Jam:</i> Animating a bouncing ball</p>
+		
+		<br>
+		
+		<b>Week 4 -</b> Character design
+		<p><i>Post-meeting Jam:</i> Design your own character</p>
+		
+		<br>
+		
+		<b>Week 5 -</b> Basic walk cycle animation
+		<p><i>Post-meeting Jam:</i> Animating a walk cycle</p>
+		
+		<br>
+		
+		<b>Week 6 -</b> Advanced walk cycle
+		<p><i>Post-meeting Jam:</i> Animating a more complex walk cycle</p>
+		
+		<br>
+		
+		<b>Week 7 -</b> Tips to creating a story and brainstorming for our project
+		<p><i>Post-meeting Jam:</i> Solidifying our project idea</p>
+		
+		<br>
+		
+		<b>Week 8 -</b> Storyboarding basics
+		<p><i>Post-meeting Jam:</i> Drafting the key scenes for our project</p>
+		
+		<br>
+		
+		<b>Week 9 -</b> Storyboarding continued
+		<p><i>Post-meeting Jam:</i> Work on scenes between the key scenes</p>
+		
+		<br>
+		
+		<b>Week 10 -</b> Let's chill~
+		<p><i>Post-meeting Jam:</i> Free draw or work on scenes</p>
+		
+		<br>
+	</div>
+	
 
 	<center>
 	<img src="Images/sleeping.gif">
