Added footer and users can now join our mailing list

--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,11 @@
 	<img src="Images/sleeping.gif">
 	</center>
 	
+	<br><br><br>
+	<div class="footer">
+	Join our <a href="mailing.html" class="b">mailing list</a> || Email us at anteatersinanimation@gmail.com
+	</div>	
+	
 	</div>
 </div>
 
