--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
 	<center>
 	<img src="Images/sleeping.gif">
 	</center>
+	<br><br><br>
+	<div class="footer">
+	Join our <a href="mailing.html" class="r">mailing list</a> || Email us at anteatersinanimation@gmail.com
+	</div>
+	
 	</div>
 </div>
 
