--- a/calendar.html
+++ b/calendar.html
@@ -40,6 +40,11 @@
 	<img src="Images/sleeping.gif">
 	</center>	
 	
+	<br><br><br>
+	<div class="footer">
+	Join our <a href="mailing.html" class="r">mailing list</a> || Email us at anteatersinanimation@gmail.com
+	</div>
+	
 	</div>
 </div>
 
