--- a/gallery-2013-2014.html
+++ b/gallery-2013-2014.html
@@ -145,7 +145,10 @@
 	<center>
 	<img src="Images/sleeping.gif">
 	</center>
-	
+	<br><br><br>
+	<div class="footer">
+	Join our <a href="mailing.html" class="b">mailing list</a> || Email us at anteatersinanimation@gmail.com
+	</div>
 	</div>
 </div>
 
