--- a/resources.html
+++ b/resources.html
@@ -179,6 +179,11 @@
 	<img src="Images/sleeping.gif">
 	</center>
 	
+	<br><br><br>
+	<div class="footer">
+	Join our <a href="mailing.html" class="b">mailing list</a> || Email us at anteatersinanimation@gmail.com
+	</div>
+	
 	</div>
 </div>
 
