--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,15 @@
 	<h1><span style="color: #c34938;">A</span>nimation <span style="color: #c34938;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<h2 class="red">Meetings</h2>
-	TBA
+	<b>Time:</b> 7 pm - 8 pm (Official meeting) 8 pm - 8:50 pm (Post-Meeting Drawing Jam)<br>
+	<b>Day:</b> Mondays<br>
+	<b>Where:</b> DBH 1422
+	
+	<br><br>
+	<center>
+	<img src="Images/map.png" style="background: #c34938; padding: 10px; border-radius: 25px;">
+	</center>
+	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 	
