Added link to meeting time on homepage

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	
 	<div class="box">
 		<h2 class="red">Fall Quarter</h2>
-		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. 
+		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
