Added week 1 lesson resources

--- a/resources.html
+++ b/resources.html
@@ -34,6 +34,44 @@
 	<h2 class="blue">Resources</h2>
 	<center><i>Check out these cool places for help and inspiration for all your art needs!</i></center>
 	<br>
+	
+	<h2 class="blue res">Post-Meeting Drawing Jams</h2>
+	<br><br>
+	<table class="resList">
+	<tr>
+		<td><strong>Week One</strong>
+		</td>
+		
+		<td><strong></strong>
+		</td>
+		
+		<td><strong></strong>
+		</td>
+	</tr>
+	
+	<tr>
+		<td>
+		<ul>
+			<li><a href="2015-2016-week1f.html" class="b">Construction and Perspective</a></li>
+			<li><a href="http://www.seventhsanctum.com/generate.php?Genname=generalperson" class="b">Random Character Descriptions</a></li>
+		</ul>
+		</td>
+		
+		<td>
+		</td>
+		
+		<td>
+		</td>
+	</tr>
+	
+	
+	</table>
+		
+	
+	
+	<br><br>
+	
+	
 	<h2 class="blue res">Art</h2>
 	<br><br>
 	<table class="resList">
