--- a/2015-2016-week1f.html
+++ b/2015-2016-week1f.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Resources</title>
+<title>Resources - Construction and Perspective</title>
 
 <link rel="shortcut icon" href="Images/favicon.ico">
 
