Added zoom feature and added in observation tutorials.
KNOWN BUG: Zoom cursor is buggy ;3;

--- a/resources.html
+++ b/resources.html
@@ -54,6 +54,7 @@
 		<ul>
 			<li><a href="2015-2016-week1f.html" class="b">Construction and Perspective</a></li>
 			<li><a href="http://www.seventhsanctum.com/generate.php?Genname=generalperson" class="b">Random Character Descriptions</a></li>
+			<li><a href="2015-2016-week1df.html" class="b">Drawing Jam - Observation</a></li>
 		</ul>
 		</td>
 		
