--- a/2015-2016-week1df.html
+++ b/2015-2016-week1df.html
@@ -35,19 +35,15 @@
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<a href="resources.html" class="b">Back</a>
-	<h2 class="blue">Construction and Perspective</h2>
+	<h2 class="blue">Drawing Jam - Observation</h2>
 	<table class="pics">
 		<tr>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Perspective1.png" class="thumb" title="Basic Perspective"></div></td>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Perspective2.png" class="thumb" title="2-Point Perspective"></div></td>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Perspective3.png" class="thumb" title="Sculpting"></div></td>		
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Perspective4.png" class="thumb" title="3-Point and More"></div></td>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Shadows.jpg" class="thumb" title="Shadows"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation1.png" class="thumb" title="Basic Perspective"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation2.png" class="thumb" title="2-Point Perspective"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation3.png" class="thumb" title="Sculpting"></div></td>		
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation4.png" class="thumb" title="3-Point and More"></div></td>
 		</tr>
 		
-		<tr>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/ConstructionExample.png" class="thumb" title="Construction Basics"></div></td>
-		</tr>
 	</table>
 	
 	</center>
