--- a/2015-2016-week1df.html
+++ b/2015-2016-week1df.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Resources - Construction and Perspective</title>
+<title>Resources - Observation</title>
 
 <link rel="shortcut icon" href="Images/favicon.ico">
 
@@ -38,10 +38,10 @@
 	<h2 class="blue">Drawing Jam - Observation</h2>
 	<table class="pics">
 		<tr>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation1.png" class="thumb" title="Basic Perspective"></div></td>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation2.png" class="thumb" title="2-Point Perspective"></div></td>
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation3.png" class="thumb" title="Sculpting"></div></td>		
-		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation4.png" class="thumb" title="3-Point and More"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation1.png" class="thumb" title="Drawing from Observation"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation2.png" class="thumb" title="Bias"></div></td>
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation3.png" class="thumb" title="Depicting Form"></div></td>		
+		<td><div class="cont"><img src="Images/Resources/2015-2016/fall/week1/Observation4.png" class="thumb" title="Applying Techniques"></div></td>
 		</tr>
 		
 	</table>
