--- a/calendar.html
+++ b/calendar.html
@@ -32,6 +32,9 @@
 	<h1><span style="color: #c34938;">A</span>nimation <span style="color: #c34938;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br>
 	<h2 class="red">Meetings</h2>
+
+	<center><strong>Weekly Meeting</strong></center><br>
+	
 	<b>Time:</b> 7 pm - 8 pm (Official meeting) 8 pm - 8:50 pm (Post-Meeting Drawing Jam)<br>
 	<b>Day:</b> Mondays<br>
 	<b>Where:</b> DBH 1422
@@ -40,6 +43,15 @@
 	<center>
 	<img src="Images/map.png" style="background: #c34938; padding: 10px; border-radius: 25px;">
 	</center>
+	<br><br>
+	
+	<center><strong>Weekly Drawing Session</strong></center><br>
+	
+	<b>Time:</b> 2 pm - 3 pm (Drawing Session 1) 8 pm - 8:50 pm (Session 2)*<br>
+	<b>Day:</b> Mondays<br>
+	<b>Where:</b> Au Bon Pain (which is past the Starbucks in the Paul Merage Business School)<br><br>
+	
+	<i>Note: The two sessions will be the same. Feel free to come to one or the other or both for even more practice!</i>
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
