Updated meeting time and location

--- a/calendar.html
+++ b/calendar.html
@@ -47,9 +47,9 @@
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
 	
-	<b>Time:</b> 2 pm - 3 pm (Drawing Session 1) 8 pm - 8:50 pm (Session 2)*<br>
-	<b>Day:</b> Mondays<br>
-	<b>Where:</b> Au Bon Pain (which is past the Starbucks in the Paul Merage Business School)<br><br>
+	<b>Time:</b> 2 pm - 3 pm (Drawing Session 1) 3 pm - 4 pm (Session 2)*<br>
+	<b>Day:</b> Fridays<br>
+	<b>Where:</b> DBH 3231<br><br>
 	
 	<i>Note: The two sessions will be the same. Feel free to come to one or the other or both for even more practice!</i>
 	
