Updated resources and fixed mailing link

--- a/resources.html
+++ b/resources.html
@@ -35,7 +35,7 @@
 	<center><i>Check out these cool places for help and inspiration for all your art needs!</i></center>
 	<br>
 	
-	<h2 class="blue res">Post-Meeting Drawing Jams</h2>
+	<h2 class="blue res">Meeting Resources</h2>
 	<br><br>
 	<table class="resList">
 	<tr>
@@ -45,7 +45,7 @@
 		<td><strong>Week Two</strong>
 		</td>
 		
-		<td><strong></strong>
+		<td><strong>Week Three</strong>
 		</td>
 	</tr>
 	
@@ -67,6 +67,38 @@
 		</td>
 		
 		<td>
+		<ul>
+			<li><a href="2015-2016-week3f.html" class="b">Animation Basics</a></li>
+			<li><a href="http://www.artbyphil.com/phfx/dib/art00002_LightingInADigitalAge/bigs/lightBallDefined.jpg" class="b">Value shading</a></li>
+		</ul>
+		</td>
+	</tr>
+
+	<tr>
+		<td><strong>Week Four</strong>
+		</td>
+		
+		<td><strong></strong>
+		</td>
+		
+		<td><strong></strong>
+		</td>
+	</tr>
+	
+	<tr>
+		<td>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=Kz95V8n4tf4" class="b">Character Design and Composition</a></li>
+			<li><a href="https://www.youtube.com/watch?v=Kz95V8n4tf4" class="b">Pasteurized by Nicholas Villarreal</a></li>
+		</ul>
+		</td>
+		
+		<td>
+
+		</td>
+		
+		<td>
+
 		</td>
 	</tr>
 	
