--- a/mailing.html
+++ b/mailing.html
@@ -42,7 +42,7 @@
 		<i>Subscribe to our MailChimp mailing list</i>
 	</center>
 	<div id="mc_embed_signup">
-	<form action="http://facebook.us9.list-manage.com/subscribe/post?u=ce983428b3c83e442f004f1eb&amp;id=7bf17571a2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<form action="http://www.facebook.us9.list-manage.com/subscribe/post?u=ce983428b3c83e442f004f1eb&amp;id=a248fef3bd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
 	<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 	<div class="mc-field-group">
