Updated times, added quests, updated schedule

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- HIGHLIGHT GOALS AND THE FACT THAT WE'RE GOING TO FOCUS ON PROJECTS -->
-<!-- HIGHLIGHT MEETING TIME!!! -->
 <html>
 <head>
 <title>Animation Anteaters</title>
@@ -85,48 +83,48 @@
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
-		<b>Week 1 -</b> Getting to know the club and each other
-		<p><i>Post-meeting Jam:</i> Randomized character description sketch</p>
+		<b>Week 1 -</b> Working on the storyboard and talking about animation roles
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 2 -</b> Gesture drawing
-		<p><i>Post-meeting Jam:</i> Posing your character from last week</p>
+		<b>Week 2 -</b> More storyboard work and animation roles
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 3 -</b> Basic bouncing ball animation
-		<p><i>Post-meeting Jam:</i> Animating a bouncing ball</p>
+		<b>Week 3 -</b> Continued from last week
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 4 -</b> Character design
-		<p><i>Post-meeting Jam:</i> Design your own character</p>
+		<b>Week 4 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 5 -</b> Basic walk cycle animation
-		<p><i>Post-meeting Jam:</i> Animating a walk cycle</p>
+		<b>Week 5 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 6 -</b> Advanced walk cycle
-		<p><i>Post-meeting Jam:</i> Animating a more complex walk cycle</p>
+		<b>Week 6 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 7 -</b> Tips to creating a story and brainstorming for our project
-		<p><i>Post-meeting Jam:</i> Solidifying our project idea</p>
+		<b>Week 7 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 8 -</b> Storyboarding basics
-		<p><i>Post-meeting Jam:</i> Drafting the key scenes for our project</p>
+		<b>Week 8 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
-		<b>Week 9 -</b> Storyboarding continued
-		<p><i>Post-meeting Jam:</i> Work on scenes between the key scenes</p>
+		<b>Week 9 -</b> Working on animation
+		<p><i>Post-meeting Jam:</i> Questing</p>
 		
 		<br>
 		
