--- a/resources.html
+++ b/resources.html
@@ -35,6 +35,28 @@
 	<center><i>Check out these cool places for help and inspiration for all your art needs!</i></center>
 	<br>
 	
+	
+		<h2 class="blue res">Quests</h2>
+	<table class="resList">	
+	<tr>
+		<td>
+		<ul>
+			<li><a href="quests.html" class="b">Quest list</a></li>
+		</ul>
+		</td>
+		
+		<td>
+		</td>
+		
+		<td>
+		</td>
+	</tr>
+	
+	
+	</table>
+	
+	<br><br>
+	
 	<h2 class="blue res">Meeting Resources</h2>
 	<br><br>
 	<table class="resList">
