--- a/calendar.html
+++ b/calendar.html
@@ -47,11 +47,9 @@
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
 	
-	<b>Time:</b> 2 pm - 3 pm (Drawing Session 1) 3 pm - 4 pm (Session 2)*<br>
-	<b>Day:</b> Fridays<br>
-	<b>Where:</b> DBH 3231<br><br>
-	
-	<i>Note: The two sessions will be the same. Feel free to come to one or the other or both for even more practice!</i>
+	<b>Time:</b> 6 pm - 8 pm<br>
+	<b>Day:</b> Wednesday<br>
+	<b>Where:</b> DBH 1422 (Week 2 and Week 3 will be at CSL 3)
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
