Updated drawing session meeting place... super late...

--- a/calendar.html
+++ b/calendar.html
@@ -47,9 +47,9 @@
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
 	
-	<b>Time:</b> 6 pm - 8 pm<br>
+	<b>Time:</b> 4 pm - 6 pm<br>
 	<b>Day:</b> Wednesday<br>
-	<b>Where:</b> DBH 1422 (Week 2 and Week 3 will be at CSL 3)
+	<b>Where:</b> CSL 4
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
