--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,8 @@
 	<h2 class="blue">Gallery</h2>
 	
 	<a href="gallery-2013-2014.html" class="b">2013-2014</a><br>
-	<a href="gallery-2014-2015.html" class="b">2014-2015</a>
+	<a href="gallery-2014-2015.html" class="b">2014-2015</a><br>
+	<b title="Coming soon!">2015-2016</b>
 	<br><br>
 	<i>Note: You must have javascript enabled in order to view the galleries</i>
 	
