--- a/calendar.html
+++ b/calendar.html
@@ -37,7 +37,7 @@
 	
 	<b>Time:</b> 7 pm - 8 pm (Official meeting) 8 pm - 8:50 pm (Post-Meeting Drawing Jam)<br>
 	<b>Day:</b> Mondays<br>
-	<b>Where:</b> DBH 1422
+	<b>Where:</b> DBH 1422 (May change)
 	
 	<br><br>
 	<center>
@@ -46,10 +46,11 @@
 	<br><br>
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
-	
+	TBA
+	<!--
 	<b>Time:</b> 4 pm - 6 pm<br>
 	<b>Day:</b> Wednesday<br>
-	<b>Where:</b> CSL 4
+	<b>Where:</b> CSL 4-->
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
