--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		
 		<td>
 		<ul>
-			<li><b>To produce</b> a complete animated short for Zotfest 2016</li>
+			<li><b>To produce</b> a complete animated short for Zotfest 2017</li>
 			<li><b>To develop fundamental skills</b> of drawing</li>
 			<li><b>To learn</b> the principles of animation</li>
 		</ul>
@@ -79,7 +79,8 @@
 	
 	<div class="box">
 		<h2 class="red">Fall Quarter</h2>
-		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
+		<center><b>TBA</b></center>
+		<!--In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
@@ -130,7 +131,7 @@
 		
 		<b>Week 10 -</b> Let's chill~
 		<p><i>Post-meeting Jam:</i> Free draw or work on scenes</p>
-		
+		-->
 		<br>
 	</div>
 	
