--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@
 	<br>
 	
 	
-		<h2 class="blue res">Quests</h2>
+<!--		<h2 class="blue res">Quests</h2>
 	<table class="resList">	
 	<tr>
 		<td>
@@ -134,7 +134,7 @@
 	
 	</table>
 		
-	
+	-->
 	
 	<br><br>
 	
