--- a/index.html
+++ b/index.html
@@ -79,60 +79,48 @@
 	
 	<div class="box">
 		<h2 class="red">Fall Quarter</h2>
-		<center><b>TBA</b></center>
-		<!--In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
+		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
-		<b>Week 1 -</b> Working on the storyboard and talking about animation roles
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 1 -</b> Introduction, information, and some ice breakers
 		
-		<br>
+		<br><br>
 		
-		<b>Week 2 -</b> More storyboard work and animation roles
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 2 -</b> Bouncing ball animation
 		
-		<br>
+		<br><br>
 		
-		<b>Week 3 -</b> Continued from last week
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 3 -</b> Walk cycle animation
 		
-		<br>
+		<br><br>
 		
-		<b>Week 4 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 4 -</b> Making gifs
 		
-		<br>
+		<br><br>
 		
-		<b>Week 5 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 5 -</b> Club animation loop project
 		
-		<br>
+		<br><br>
 		
-		<b>Week 6 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 6 -</b> Club animation loop project continued
 		
-		<br>
+		<br><br>
 		
-		<b>Week 7 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 7 -</b> Short final small group animation
 		
-		<br>
+		<br><br>
 		
-		<b>Week 8 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 8 -</b> Small group animation continued
 		
-		<br>
+		<br><br>
 		
-		<b>Week 9 -</b> Working on animation
-		<p><i>Post-meeting Jam:</i> Questing</p>
+		<b>Week 9 -</b> Finish up small group animation
 		
-		<br>
+		<br><br>
 		
-		<b>Week 10 -</b> Let's chill~
-		<p><i>Post-meeting Jam:</i> Free draw or work on scenes</p>
-		-->
-		<br>
+		<b>Week 10 -</b> Let's chill and partay and see our work from the quarter~
+		<br><br>
 	</div>
 	
 
