--- a/calendar.html
+++ b/calendar.html
@@ -46,11 +46,9 @@
 	<br><br>
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
-	TBA
-	<!--
-	<b>Time:</b> 4 pm - 6 pm<br>
+	<b>Time:</b> 5 pm - 7 pm<br>
 	<b>Day:</b> Wednesday<br>
-	<b>Where:</b> CSL 4-->
+	<b>Where:</b> First session will be held at Au Bon Pain (Located in the business school)
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
