Updated mailing subscription form and resources

--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,44 @@
 	<br>
 	
 	
+		<h2 class="blue res">Meeting Resources</h2>
+	<br><br>
+	<table class="resList">
+	<tr>
+		<td><strong>Week One</strong>
+		</td>
+		
+		<td>
+		</td>
+		
+		<td>
+		</td>
+	</tr>
+	
+	<tr>
+		<td>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=VaLESWaRMjU" class="b">Squash And Stretch Explained</a></li>
+			<li><a href="https://www.youtube.com/watch?v=GZ0GgaPBTfQ" class="b">12 Basic Animation Principles</a></li>
+			<li><a href="https://www.youtube.com/watch?v=HfFj-VQKiAM" class="b">Exaggeration</a></li>
+			<li><a href="https://www.youtube.com/watch?v=v8quCbt4C-c" class="b">Straight Ahead and Pose to Pose</a></li>
+			<li><a href="https://www.youtube.com/watch?v=haa7n3UGyDc" class="b">Squash and Stretch</a></li>
+		</ul>
+		</td>
+		
+		<td>
+		</td>
+		
+		<td>
+		</td>
+	</tr>
+
+	
+	
+	</table>
+	
+	
+	
 <!--		<h2 class="blue res">Quests</h2>
 	<table class="resList">	
 	<tr>
@@ -56,7 +94,8 @@
 	</table>
 	
 	<br><br>
-	
+	-->
+	<!--
 	<h2 class="blue res">Meeting Resources</h2>
 	<br><br>
 	<table class="resList">
