--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,8 @@
 	
 	<a href="gallery-2013-2014.html" class="b">2013-2014</a><br>
 	<a href="gallery-2014-2015.html" class="b">2014-2015</a><br>
-	<b title="Coming soon!">2015-2016</b>
+	<b title="Coming soon!">2015-2016</b><br>
+	<a href="gallery-2016-2017.html" class="b">2016-2017</a>
 	<br><br>
 	<i>Note: You must have javascript enabled in order to view the galleries</i>
 	
