Added more pics

--- a/gallery-2016-2017.html
+++ b/gallery-2016-2017.html
@@ -50,7 +50,13 @@
 		<td><div class="cont"><img src="Images/2016-2017/runningCat.gif" class="thumb" title="Running Cat by Amanda Dang"></div></td>
 		<td><div class="cont"><img src="Images/2016-2017/WalkCycle2.gif" class="thumb" title="Walking Dino by Nik Hammon"></div></td>		
 		<td><div class="cont"><img src="Images/2016-2017/girlwalkingloop.gif" class="thumb" title="Walking Girl by Tran Gieng"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/StickJump.gif" class="thumb" title="Jumping by Jeffrey Ye"></div></td>
 		</tr>
+		
+		<tr>
+		<td><div class="cont"><img src="Images/2016-2017/walk-cycle.gif" class="thumb" title="Peanut Butter Animation by Jose Antonio B. Sevilla"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
+		</tr>		
 	</table>
 	
 	<br><br>	
