Added art exchange

--- a/gallery-2016-2017.html
+++ b/gallery-2016-2017.html
@@ -55,7 +55,11 @@
 		
 		<tr>
 		<td><div class="cont"><img src="Images/2016-2017/walk-cycle.gif" class="thumb" title="Peanut Butter Animation by Jose Antonio B. Sevilla"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/" class="thumb" title="The Test Run"></div></td>
 		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
+		
 		</tr>		
 	</table>
 	
