--- a/HolidayExchange2016/giftexchange.html
+++ b/HolidayExchange2016/giftexchange.html
@@ -68,6 +68,8 @@ h1 {
 <br><br>
 Enjoy and Happy Holidays! Obligatory boat Moo picture for all of you~
 <br><br>
+If you'd like to save your image, right click the image/video and select save as.
+<br><br>
 <i>~Nina~</i>
 <h1>Melissa</h1>
 <h2>From Nik</h2>
