--- a/HolidayExchange2016/giftexchange.html
+++ b/HolidayExchange2016/giftexchange.html
@@ -89,7 +89,7 @@ If you'd like to save your image, right click the image/video and select save as
 <h2>From Amanda</h2>
 <img src="fromamanda2.png">
 <br><br>
-<img src="toamanda.PNG">
+<img src="toamie.PNG">
 
 <h1>Nik</h1>
 <h2>From Ryan</h2>
