More messing with computer

--- a/calendar.html
+++ b/calendar.html
@@ -46,9 +46,9 @@
 	<br><br>
 	
 	<center><strong>Weekly Drawing Session</strong></center><br>
-	<b>Time:</b> 5 pm - 7 pm<br>
-	<b>Day:</b> Wednesday<br>
-	<b>Where:</b> First session will be held at Au Bon Pain (Located in the business school)
+	<b>Time:</b> TBA<br>
+	<b>Day:</b> TBA<br>
+	<b>Where:</b> TBA
 	
 	<h2 class="red">Calendar</h2>
 	<iframe src="https://www.google.com/calendar/embed?src=anteatersinanimation%40gmail.com&ctz=America/Vancouver" style="border: 0" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
