--- a/gallery-2016-2017.html
+++ b/gallery-2016-2017.html
@@ -55,10 +55,10 @@
 		
 		<tr>
 		<td><div class="cont"><img src="Images/2016-2017/walk-cycle.gif" class="thumb" title="Peanut Butter Animation by Jose Antonio B. Sevilla"></div></td>
-		<td><div class="cont"><img src="Images/2016-2017/" class="thumb" title="The Test Run"></div></td>
 		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
-		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
-		<td><div class="cont"><img src="Images/2016-2017/exampleAnim.gif" class="thumb" title="The Test Run"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/Angela.gif" class="thumb" title="Dino Animation by Angela"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/Elbert.gif" class="thumb" title="Silence by Elbert Ho"></div></td>
+		<td><div class="cont"><img src="Images/2016-2017/SmallAnimation.gif" class="thumb" title="Animation by Annie and Tran"></div></td>
 		
 		</tr>		
 	</table>
