--- a/index.html
+++ b/index.html
@@ -83,39 +83,39 @@
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
-		<b>Week 1 -</b> Introduction, information, and some ice breakers
+		<b>Week 1 -</b> Animation review, small in-meeting animation project
 		
 		<br><br>
 		
-		<b>Week 2 -</b> Bouncing ball animation
+		<b>Week 2 -</b> No meeting
 		
 		<br><br>
 		
-		<b>Week 3 -</b> Walk cycle animation
+		<b>Week 3 -</b> Work on P Animation or short group/indiv project (topic provided)
 		
 		<br><br>
 		
-		<b>Week 4 -</b> Making gifs
+		<b>Week 4 -</b> Continue work from previous week
 		
 		<br><br>
 		
-		<b>Week 5 -</b> Club animation loop project
+		<b>Week 5 -</b> Work on P Animation and 5 second day group/indiv project
 		
 		<br><br>
 		
-		<b>Week 6 -</b> Club animation loop project continued
+		<b>Week 6 -</b> Work on P Animation and new 5 second day group/indiv project
 		
 		<br><br>
 		
-		<b>Week 7 -</b> Short final small group animation
+		<b>Week 7 -</b> No meeting
 		
 		<br><br>
 		
-		<b>Week 8 -</b> Small group animation continued
+		<b>Week 8 -</b> Critique/Finish any unfinished work
 		
 		<br><br>
 		
-		<b>Week 9 -</b> Finish up small group animation
+		<b>Week 9 -</b> Polish animations from this quarter
 		
 		<br><br>
 		
