--- a/gallery-2016-2017.html
+++ b/gallery-2016-2017.html
@@ -35,7 +35,15 @@
 	<h1><span style="color: #2b9ec6;">A</span>nimation <span style="color: #2b9ec6;">A</span>nteaters</h1>
 	<br><br><br><br><br><br><br><br><br>
 	<a href="gallery.html" class="b">Back</a>
-	<h2 class="blue">Art<br>2016-2017</h2>
+	<h2 class="blue">Club Loop Animation<br>2016-2017</h2>
+	<br><br>
+	<center>
+	<video class="vid" controls>
+		<source src="Images/2016-2017/animloopCompile.mp4" type="video/mp4">
+	</video>
+
+	<br><br>
+	<h2 class="blue">Art</h2>
 	<table class="pics">
 		<tr>
 		<td><div class="cont"><img src="Images/2016-2017/boatmoo1.jpg" class="thumb" title="Boat Moo Super Hero Team 1"></div></td>
