--- a/resources.html
+++ b/resources.html
@@ -40,10 +40,10 @@
 	<br><br>
 	<table class="resList">
 	<tr>
-		<td><strong>Week One</strong>
+		<td><strong>Fall 2016 Week One</strong>
 		</td>
 		
-		<td>
+		<td><strong>Winter 2017 Week One</strong>
 		</td>
 		
 		<td>
@@ -62,6 +62,9 @@
 		</td>
 		
 		<td>
+			<ul>
+				<li><a href="https://www.youtube.com/watch?v=haa7n3UGyDc&list=PL-bOh8btec4CXd2ya1NmSKpi92U_l6ZJd" class="b">12 Animation Principles</a></li>
+			</ul>
 		</td>
 		
 		<td>
