--- a/resources.html
+++ b/resources.html
@@ -64,6 +64,7 @@
 		<td>
 			<ul>
 				<li><a href="https://www.youtube.com/watch?v=haa7n3UGyDc&list=PL-bOh8btec4CXd2ya1NmSKpi92U_l6ZJd" class="b">12 Animation Principles</a></li>
+				<li><a href="2016-2017-week1w.html" class="b">Animation Principles Example</a></li>
 			</ul>
 		</td>
 		
