Updated leadership link, schedule and meeting times

--- a/index.html
+++ b/index.html
@@ -78,44 +78,44 @@
 	<br><br>
 	
 	<div class="box">
-		<h2 class="red">Winter Quarter</h2>
-		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
+		<h2 class="red">Spring Quarter</h2>
+		In general, our meetings follow a split format. The first part of our meeting is typically focused on lessons, examples, activities, and any club announcements, while we host a drawing jam during the second part. Attendance is not mandatory for the post-meeting jam, but we strongly encourage you to stick around. Check out our meeting times <a href="calendar.html">here</a>!
 		<br><br>
 		<i>*The schedule may change a little as the quarter progresses</i>
 		<br><br>
-		<b>Week 1 -</b> Animation review, small in-meeting animation project
+		<b>Week 1 -</b> Storyboarding
 		
 		<br><br>
 		
-		<b>Week 2 -</b> No meeting
+		<b>Week 2 -</b> Character design
 		
 		<br><br>
 		
-		<b>Week 3 -</b> Work on P Animation or short group/indiv project (topic provided)
+		<b>Week 3 -</b> In-betweens
 		
 		<br><br>
 		
-		<b>Week 4 -</b> Continue work from previous week
+		<b>Week 4 -</b> In-betweens
 		
 		<br><br>
 		
-		<b>Week 5 -</b> Work on P Animation and 5 second day group/indiv project
+		<b>Week 5 -</b> 5 Second Animation
 		
 		<br><br>
 		
-		<b>Week 6 -</b> Work on P Animation and new 5 second day group/indiv project
+		<b>Week 6 -</b> 5 Second Animation continued
 		
 		<br><br>
 		
-		<b>Week 7 -</b> No meeting
+		<b>Week 7 -</b> Fight Scene
 		
 		<br><br>
 		
-		<b>Week 8 -</b> Critique/Finish any unfinished work
+		<b>Week 8 -</b> Fight Scene Continued
 		
 		<br><br>
 		
-		<b>Week 9 -</b> Polish animations from this quarter
+		<b>Week 9 -</b> No Meeting
 		
 		<br><br>
 		
