--- a/calendar.html
+++ b/calendar.html
@@ -37,7 +37,7 @@
 	
 	<b>Time:</b> 7 pm - 8 pm (Official meeting) 8 pm - 8:50 pm (Post-Meeting Drawing Jam)<br>
 	<b>Day:</b> Mondays<br>
-	<b>Where:</b> DBH 1422 (May change)
+	<b>Where:</b> DBH 1425
 	
 	<br><br>
 	<center>
